# tinkwise

./: SleepCode.ino  raspberry_install.txt  test_data.txt
arduino/: .cproject
arduino/binary16_test/: binary16_test.ino
arduino/dummy_receiver/: dummy_receiver.ino
arduino/libraries/NewPing/examples/NewPingExample/: NewPingExample.ino
arduino/libraries/Sensirion/: Sensirion.cpp
arduino/wirelessreceiver/: wirelessreceiver.ino
arduino/wirelesstransmitter/: wirelesstransmitter.ino
dht_transmitter/: dht_transmitter.ino
documentation/: CMake Useful Variables - KitwarePublic.html  CMake:CPackPackageGenerators - KitwarePublic.html  CMake:Packaging With CPack - KitwarePublic.html  CMake_CPack_Examples_Linux_DEB - KitwarePublic.html  RRDtool - rrd-beginners.html  RRDtool - rrdtutorial.html  cmake_2.8.12_manual.html
documentation/original_code/s10e5/: s10e5.h
documentation/original_code/wirelessnetworksource/: wirelessnetwork.py  wirelessnetworkv3.fzz
gateway/: CMakeLists.txt  RrdHelper.py  gateway.py  init_script  package.sh  postinst  test.conf  test_data.txt  tinkwise.conf
lm35_test/: lm35_test.ino
temperature_gateway/workspace/gateway/: gateway.py  test_data.txt
wirelessnetworksource/wirelessreceiver/: wirelessreceiver.ino
wirelessnetworksource/wirelesstransmitter/: wirelesstransmitter.ino
